# remote_file_service

./: .gitignore  Cargo.toml  Makefile  README.md  run_tests.sh
crates/rfs/: Cargo.toml
crates/rfs/src/: callback.rs  fs.rs  interfaces.rs  lib.rs
crates/rfs/src/fs/: virt_objects.rs
crates/rfs_client/: Cargo.toml
crates/rfs_client/src/: args.rs  data_collection.rs  main.rs  test.rs  ui.rs
crates/rfs_client/src/ui/: app.rs  contents.rs  tui.rs  widgets.rs
crates/rfs_core/: Cargo.toml  serialized
crates/rfs_core/src/: context_manager.rs  fsm.rs  lib.rs  middleware.rs  remote_methods.rs  ser_de.rs
crates/rfs_core/src/middleware/: blob_trx.rs  callback.rs  context_manager.rs  dispatch.rs  handshake_proto.rs
crates/rfs_core/src/ser_de/: byte_packer.rs  consts.rs  de.rs  err.rs  ser.rs
crates/rfs_macros/: Cargo.toml
crates/rfs_macros/src/: client.rs  client_builder.rs  extend_remote_callback.rs  extend_remote_interface.rs  lib.rs  remote_call.rs  remote_callback.rs  remote_message.rs  remote_method_signature.rs
crates/rfs_methods/: Cargo.toml
crates/rfs_methods/src/: fs.rs  lib.rs  virt_objects.rs
crates/rfs_methods/src/fs/: virt_objects.rs
crates/rfs_server/: Cargo.toml
crates/rfs_server/src/: args.rs  main.rs  server.rs
crates/rfs_server/src/server/: callbacks.rs
report/: .gitignore  all.csv  main.typ  vis.ipynb
report/media/: .gitignore  interface_gen.excalidraw  overview.excalidraw
