[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
description = "Course project for CE4013 (Distributed Systems) AY2023 S2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
log = "0.4"
futures = "0"
async-trait = "0"
# lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0"
rand = "0"

# bin stuffs
pretty_env_logger = "0"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
    "sync",
] }
tokio-util = "0"
clap = { version = "4", features = ["derive", "string"] }
humantime = "2"
