[package]
name = "rfs_client"
version = "0.1.0"
edition.workspace = true
description = "Client binary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfs_core = { path = "../rfs_core" }
rfs = { path = "../rfs" }


clap = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
futures = { workspace = true }
