[package]
name = "rfs_client"
version = "0.1.0"
edition.workspace = true
description = "Client binary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfs = { path = "../rfs" }

clap = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
futures = { workspace = true }

crossterm = "0"
ratatui = { version = "0", features = ["all-widgets"] }
humantime = { workspace = true }
