[package]
name = "rfs_core"
version = "0.1.0"
edition.workspace = true
description = "RPC impls and common code library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfs_macros = { path = "../rfs_macros" }

async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
