[package]
name = "rfs_server"
version = "0.1.0"
edition.workspace = true
description = "Server binary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rfs_core = { path = "../rfs_core" }
rfs_methods = { path = "../rfs_methods" }

async-trait = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
