[package]
name = "rfs_server"
version = "0.1.0"
edition.workspace = true
description = "Server binary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfs_core = { path = "../rfs_core" }
rfs = { path = "../rfs" }

async-trait = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
